docker_k8s/nginx_middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nginx
  namespace: test
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: "SAMEORIGIN"
      X-XSS-Protection: "1; mode=block"
      Strict-Transport-Security: "max-age=31536000; includeSubDomains"
