docker_k8s/nginx_ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test
  namespace: fanfliks
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.gladeos.dev`)
      kind: Rule
      services:
        - name: test
          port: 80
      middlewares:
        - name: test
  # tls:
  #   secretName: ssl-gladeos-dev-ql8qz
